--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -9,36 +9,44 @@ events {
 
 http {
     # your code goes here ...
+    log_format upstreamlog '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
     upstream app {
-        server localhost:8000;
+        server app:8000;
     }
 
 server {
-        listen 80; ## in this part will catch all trafic on mentioned Ports
-        listen 443 ssl;
-        #root /opt/application;
+      listen 80;
+      server_name _; #This will match with any hostname
+      return 301 https://$host$request_uri;
+    }
+
+server {
+        listen 443 ssl http2; ## in this part will catch all trafic on mentioned Port 
         server_name _; #This will match with any hostname
-        return 301 https:$host$request_uri;
-        ssl_certificate ../files/localhost.crt;
-        ssl_certificate_key ../files/localhost.key;
-        ssl_protocols TLSv1.2 TLSv1.3;
-        ssl_ciphers ECDHE-RSA-AES128-GCM-SHA256:ECDHE-ECDSA-AES128-GCM-SHA256;
+        ssl_certificate /etc/ssl/localhost.crt;
+        ssl_certificate_key /etc/ssl/localhost.key;
+        #ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_protocols SSLv3 TLSv1.2 TLSv1.3;
+        ssl_ciphers EECDH+CHACHA20:EECDH+3DES:EECDH+AES256:RSA+AES256:RSA+3DES:!MD5:!3DES;
         ssl_prefer_server_ciphers  on;
+        access_log /var/log/nginx/access.log upstreamlog;
+        add_header Strict-Transport-Security "max-age=31536000; includeSubDomains" always;
+        #EECDH+AES128:RSA+AES128:
         
-        
-        
-       
 
 location / {
     #include proxy_params; 
-    proxy_pass app:8000;
+    proxy_pass http://app;
     proxy_set_header Host $host;
     proxy_set_header X-Forwarder-Host $server_name;
-    proxy_set_header X-Forwarder-For $proxy_add_x_forwarderd_for;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
     proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-Proto $scheme;
     proxy_set_header Upgrade $http_upgrade;
     proxy_set_header Connection "upgrade";
     }
-}
+ }
 }
 
